--- a/aboutus.html
+++ b/aboutus.html
@@ -43,8 +43,7 @@
                          <img src="assets/images/logopit-1549395253940-94x94.png" alt="Mobirise" title="" style="height: 4.6rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">
-                        Biofurcate</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">Biofurcate | Home</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -66,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="cid-rheCeit1wC mbr-parallax-background" id="header15-j">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website for free</a></section><section class="cid-rheCeit1wC mbr-parallax-background" id="header15-j">
 
     
 
@@ -87,7 +86,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QiqTXgEoJ3Q2z8AES90ZVInlBJC1OPK3LkwlNOZ34CRJYTnMQdvgCdZvwtIU0zLCOfr2ZD6a2fIEEG221j9uPpMTKpxWlvZApIvYTtcNRag8aWd3+PXG6LNUCYZECYN3">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NHeguQDbNvKidEE6biwpcgzdMXJTCTZSIxHdMTSXCjijCYFc9pgVg5SZbo9+wZg5MriNgBFgBe0mtqA8eh6JmbimC0qha6fwyEZng83nuhaOJ4uXLUm9aVL9R5NytKt4">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-j">
