--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -200,7 +200,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fCATfYJOqBGah630pBScawcf2Vclx224Ch/F/9Amre9OliA2Dn2QbbMW5mfhbed3SoYyao3weAE7dv6mFTw9reWfJLFcZIvJ4epwKcT1iWDVwDSGtuitbYBOVU3F1mnr">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RhV9x5wgQF1McrqZ3jRXfP4+KlBF/v5F0Lj0J+Pm9nL9pkt63ZJv85wN8uBr6zGkYgUQxzEr9Xs+rFIUBI1Rg752Vlbi8a/VeYcs/W0gO6eMvf9IOtsuk/ULMRDf79Eq">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -259,8 +259,8 @@
                     Contacts
                 </h5>
                 <p class="mbr-text">
-                    Email: <a href="mailto:biofurcate@gmai.com">biofurcate@gmail.com</a>
-                    <br>Phone: <a href="tel:+91-7029848129" class="text-danger">+ 91-7029848129</a><br></p>
+                    Email: <strong><a href="mailto:biofurcate@gmai.com"><b>biofurcate@gmail.com
+                    </b></a><br></strong>Phone: <a href="tel:+91-7029848129" class="text-danger">+ 91-7029848129</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Downloads</h5>
